issue #217 platform img spacing (#221)

--- a/themes/ansible-community/sass/_homepage-platform-band.scss
+++ b/themes/ansible-community/sass/_homepage-platform-band.scss
@@ -12,11 +12,8 @@
 .platform-box-left {
   display: flex;
   flex-direction: column;
-  padding-left: 0;
   margin-top: 1rem;
-  img {
-    float: left;
-  }
+  align-items: center;
 }
 
 .platform-box-right {
@@ -52,8 +49,7 @@
   }
 
   .platform-box-left {
-    align-items: center;
-    padding-bottom: 40px;
+    padding-bottom: 2.25rem;
   }
 
   .platform-box-right {
